# imageable

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE_DIAGRAM.md  README.md  TESTING_GUIDE.md  pyproject.toml  test_public_api.py
.github/workflow/: ci.yml
.github/workflows/: ci.yml
demo/: demo_january_2025.ipynb
demo/demo_data/images/: subsample_10_nearby.geojson
demo/demo_data/images/building_0/: metadata.json
demo/demo_data/images/building_1/: metadata.json
demo/demo_data/images/building_2/: metadata.json
demo/demo_data/images/building_3/: metadata.json
demo/demo_data/images/building_4/: metadata.json
demo/demo_data/images/building_5/: metadata.json
demo/demo_data/images/building_6/: metadata.json
demo/demo_data/images/building_7/: metadata.json
demo/demo_data/images/building_8/: metadata.json
demo/demo_data/images/building_9/: metadata.json
docs/: API_QUICK_REFERENCE.md  GETTING_STARTED.md
notebooks/: demo.ipynb  demo_short.ipynb  materials.percentages.ipynb
src/imageable/: __init__.py  main.py
src/imageable/_correction_ensembles/: cluster_weighted_ensemble.py  model_factories.py
src/imageable/_dataset_builder/: dataset_from_gdf.py
src/imageable/_extraction/: building.py  extract.py  image.py
src/imageable/_features/height/: building_height.py  metadata.json
src/imageable/_features/materials/: building_materials.py
src/imageable/_images/: acquisition.py  download.py  image.py
src/imageable/_images/camera/: building_observation.py  camera_adjustment.py  camera_parameters.py
src/imageable/_models/: base.py  distance_to_streets_wrapper.py  height_correction_model.py  line_param_selection_model.py
src/imageable/_models/height_estimation/: __init__.py  height_calculator.py  vanishing_point.py
src/imageable/_models/height_estimation/processors/: line_classifier.py  line_refiner.py
src/imageable/_models/huggingface/: base.py  floor_sky_ratio_calculator.py  segformer_segmentation.py
src/imageable/_models/lcnn/: lcnn_wrapper.py
src/imageable/_models/lcnn/core/: metric.py  trainer.py  utils.py
src/imageable/_models/lcnn/models/: __init__.py  hourglass_pose.py  line_vectorizer.py  multitask_learner.py
src/imageable/_models/materials/: label_palette.py  material_seg_model.py  postprocess.py  preprocess.py  result_types.py  rmsnet.py  rmsnet_wrapper.py
src/imageable/_models/materials/backbones/: segformer_mit_encoder.py
src/imageable/_models/materials/decoders/: samixer_head.py
src/imageable/_models/materials/norms/: sync_batchnorm.py
src/imageable/_models/vpts/: vpts_wrapper.py
src/imageable/_utils/geometry/: line_geometry.py  point_geometry.py  polygons.py  ray_geometry.py
src/imageable/_utils/masks/: mask_visualizer.py
src/imageable/assets/: ade20k_palette.json  wireframe.yaml
src/imageable/core/: __init__.py  building_data.py  dataset.py  image.py
src/imageable/correction_ensembles/: cluster_weighted_ensemble.py
src/imageable/dataset_builder/: dataset_from_gdf.py
src/imageable/features/: footprint_features.py
src/imageable/features/height/: building_height.py
src/imageable/features/materials/: building_materials.py
src/imageable/images/: camera.py  download.py  image.py
src/imageable/images/camera/: building_observation.py  camera_adjustment.py  camera_parameters.py
src/imageable/io/: file_handler.py
src/imageable/models/: base.py  distance_to_streets_wrapper.py  line_param_selection_model.py
src/imageable/models/height_estimation/: __init__.py  core.py  height_calculator.py  single_view_metrology.py  vanishing_point.py
src/imageable/models/height_estimation/processors/: line_classifier.py  line_refiner.py
src/imageable/models/huggingface/: base.py  floor_sky_ratio_calculator.py  segformer_segmentation.py
src/imageable/models/lcnn/: __init__.py  lcnn_wrapper.py
src/imageable/models/lcnn/core/: __init__.py  box.py  config.py
src/imageable/models/lcnn/models/: line_vectorizer.py  multitask_learner.py
src/imageable/models/lcnn_lib/: box.py  config.py  datasets.py  metric.py  postprocess.py  trainer.py  utils.py
src/imageable/models/lcnn_lib/models/: hourglass_pose.py  line_vectorizer.py  multitask_learner.py
src/imageable/models/materials/: dpt_gate.py  label_palette.py  material_seg_model.py  postprocess.py  preprocess.py  result_types.py  rmsnet.py  rmsnet_wrapper.py
src/imageable/models/vpts/: vpts_wrapper.py
src/imageable/properties/: building.py  extract.py  footprint.py  image.py
src/imageable/utils/geometry/: point_geometry.py  polygons.py  ray_geometry.py  surface_geometry.py
src/imageable/utils/masks/: mask_operations.py  mask_visualizer.py
src/imageable/visualization/: footprints.py  wheel_visualization.py
src/notebooks/pictures/: metadata.json
tests/: conftest.py  test_main.py  test_public_api.py  test_smoke.py
tests/_extraction/: __init__.py  test_extract.py  test_footprint.py  test_image_calculator.py
tests/core/: test_building_data.py  test_dataset.py  test_image.py
tests/features/: test_materials.py
tests/images/: test_acquisition.py  test_camera.py  test_download.py  test_image.py
tests/images/camera/: test_camera.py  test_observation_point.py
tests/models/height_estimation/: __init__.py  height_calculator.py  test_height_estimation.py
tests/models/huggingface/: test_segformer_segmentation.py
tests/models/lcnn/: test_lcnn_wrapper.py  test_predict.py
tests/models/vpts/: test_vanishing_points.py
tests/properties/: test_building.py  test_footprint.py  test_property_extraction.py
tests/utils/geometry/: test_point_geometry.py  test_polygon_geometry.py  test_ray_geometry.py  tests_point_geometry.py  tests_polygon_geometry.py  tests_ray_geometry.py
tests/utils/mask_operations/: mask_operations.py  test_mask_operations.py
(+3 files in other folders)
