[project]
name = "imageable"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Khoi Ngo", email = "ngo.kho@northeastern.edu" }, 
    { name = "Uriel Legaria", email = "fill@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.2.6",
    "pandas>=2.2.3",
]

[project.scripts]
imageable = "imageable:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "numpydoc>=1.8.0",
    "pytest>=8.4.0",
    "pytest-cov>=6.1.1",
]

# Pytest configuration
[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "--cov=src/imageable",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "--cov-report=html",
    "--cov-fail-under=80",
    "--strict-markers",
    "--doctest-modules",
]
testpaths = ["tests", "src"]

[tool.coverage.run]
source = ["src/imageable"]
branch = true
omit = ["*/tests/*", "*/test_*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "@(abc\\.)?abstractmethod",
]
